--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,13 @@ arboard = "3.4.1"
 env_logger = "0.11.6"
 hidapi = "2.6.3"
 log = "0.4.22"
-sysinfo = "0.33.1"
 tokio = { version = "1", features = ["full"] }
+bincode = "2.0.0-rc.3"
+windows = { version = "0.60.0", features = [
+    "Win32_Media_Audio",
+    "Win32_Media_Audio_Endpoints",
+    "Win32_System_Com",
+    "Win32_System_Com_StructuredStorage",
+    "Win32_System_Variant",
+] }
+windows-core = "0.60.1"
